Tue Jul 28 19:46:53 BST 1998  Adam D. Moss <adam@gimp.org>

	* plug-ins/gee/gee.c
	* plug-ins/animationplay/animationplay.c: Fixes for
	gdkrgb output on pseudocolour displays.

Mon Jul 27 12:27:47 PDT 1998 Manish Singh <yosh@gimp.org>

	* plug-ins/fp/fp.c: make PDB entry for filter pack saner

Mon Jul 27 14:29:39 1998  Scott Goehring  <scott@poverty.bloomington.in.us>

	* app/xcf.c (xcf_load_level): Made xcf loader a little less
	zealous in trying to copy-on-write duplicated tiles.

Sun Jul 26 23:47:33 MEST 1998 Sven Neumann <sven@gimp.org>

	* app/blend.c
	* app/crop.c
	* app/edit_selection.c
	* app/rect_select.c: More statusbar stuff (should be finished now,
	but who knows...)
	
Sat Jul 25 04:11:31 PDT 1998  Jay Cox <jaycox@earthlink.net>

	* app/pixel_region.c: optimized pixel_region_[gs]et_row,
	minor optimization to pixel_region_[gs]et_col

Sat Jul 25 11:09:58 BST 1998  Adam D. Moss <adam@gimp.org>

	* app/convert.c: Convert-to-indexed now remembers the last
	invocation's settings.  Also, GRAY->INDEXED more flexible.

Sat Jul 25 03:09:02 PDT 1998  Jay Cox <jaycox@earthlink.net>

	* app/gimpbrushgenerated.c: swap out the mask if
	stingy_memory_use is set.

	* app/gimpbrushlist.c: fixed bug related to
	stingy_memory_use

Fri Jul 24 14:03:13 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/transform*.[ch]: applied gimp-tml-980724-1 for new
	transform tool ui. It's still a little rough, needs fixes

Fri Jul 24 14:40:55 CDT 1998  Larry Ewing  <lewing@gimp.org>

	* app/layers_dialog.c (lc_dialog_create): moved 
	gtk_widget_show (lc_shell) so that the layers show up in the
	dialog again.  I've told Owen about this problem, we'll see what
	comes up.

Fri Jul 24 19:36:33 BST 1998  Adam D. Moss <adam@gimp.org>

	* app/appenv.h app/brightness_contrast.c app/color_balance.c
	app/curves.c app/gdisplay.h app/gdisplay_ops.c
	app/hue_saturation.c app/paint_core.c app/paint_funcs.c
	app/undo.c: Attempt to speed-up and/or sanitize
	MAX/MIN/CLAMP macro usage throughout gimp-core.
