@@ -1,3 +1,10 @@
+1998-07-28  Tuomas Kuosmanen  <tigert@gimp.org>
+
+	* app/file_new_dialog.c
+	* app/layers_dialog.c: change the order of the different 
+	fill-types (Foreground and Background are nicer to sit besides
+	each other)
+
 Tue Jul 28 19:46:53 BST 1998  Adam D. Moss <adam@gimp.org>
 
 	* plug-ins/gee/gee.c
